--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="box">
     <h1>Delete Your Account</h1>
     <p>
-      You can request permanent deletion of your account and associated data for the <strong>WIMB App</strong>.
+      You can request permanent deletion of your account and associated data for the <strong>Emunsi App</strong>.
     </p>
 
     <h2>How to request account deletion?</h2>
@@ -86,4 +86,5 @@
   </div>
 </body>
 </html>
+
 
